--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ This site showcases my projects and is also somewhat
 morphing into a sandbox design experiment for my HTML/CSS
 -->
 
-<!DOCTYPE html>
+<html>
 	<head>
 		<title>Mat Portfolio Design</title>
 		<link rel="stylesheet" href="stylesheet.css" type="text/css" />
