Updated layout and descriptions

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!--  
+<!--
 www.matfukano.com
 author: Mat Fukano
 
-This site showcases my projects and is also somewhat 
+This site showcases my projects and is also somewhat
 morphing into a sandbox design experiment for my HTML/CSS
 -->
 
@@ -28,25 +28,73 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
           <div class="icons right">
-            <a href="http://github.com/mfukano"><img src="assets/svg/github-logo.svg" alt="github-octocat" class="icon" /></a> 
+            <a href="http://github.com/mfukano"><img src="assets/svg/github-logo.svg" alt="github-octocat" class="icon" /></a>
             <a href="http://codepen.io/marotafuka"><img src="assets/svg/codepen.svg" alt="codepen-shape" class="icon" style="padding-right: 5px;" /></a>
           </div>
 
           <div class="text-box">
 
-            <h2>My Projects</h2>
-            <div class="project-dropdown" id="pocket-mom">
+            <h2>Web Development</h2>
+
+            <div class="project-dropdown">
               <div class="project-title">
-                <a class="project-link" href="#">Pocket Mom</a><a href="http://www.pocketmom.io"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a> 
+                <a class="project-link" href="#">Pocket Mom</a><a href="http://www.pocketmom.io"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
                 <p class="project-description">I built the landing page for Pocket Mom, an upcoming productivity application.</p>
               </div>
             </div>
 
-            <div class="project-dropdown" id="not-zombies">
+						<div class="project-dropdown">
               <div class="project-title">
-                <a class="project-link" href="#">Not Zombies</a><a href="https://github.com/mfukano/Not-Zombies"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a> 
+                <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+              </div>
+              <div class="project-container hide">
+                <p class="project-description">
+                <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
+                </p>
+                <p class="project-description">A simple tribute page inspired by Free Code Camp. I think this is a great resource and worth walking through for anyone that's trying to break into modern programming, or transition into web development.</p>
+              </div>
+            </div>
+
+            <div class="project-dropdown">
+              <a class="project-link">matfukano.com</a>
+              <div class="project-container hide">
+                <p class="project-description">This one is pretty self explanatory. My personal site lets me experiment with different ways to do things, and a lot of what I've learned here (clickable contexts for jQuery, box-model details, active classes, and hand-coding Bootstrap-like functionality) is applicable to future works.</p>
+              </div>
+            </div>
+
+            <div class="separator"></div>
+
+            <h2>Open Source</h2>
+
+            <div class="project-dropdown">
+              <div class="project-title">
+                <a class="project-link" href="#">Noding Bat</a><a href="https://github.com/omariio/nodingbat"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+              </div>
+              <div class="project-container hide">
+                <p class="project-description">
+                <div class="carousel" class="shadow">
+                  <img class='opaque' src="assets/images/noding-bat-1.png" />
+                  <img src="assets/images/noding-bat-2.png" />
+                </div>
+                <p class="carousel_controls">
+                  <span class="selected">1</span>
+                  <span>2</span>
+                </p>
+                <p>Noding Bat is an open source extension of Coding Bat. It aims to provide beginner programmers with basic JavaScript mechanics.</p>
+                </p>
+              </div>
+            </div>
+
+            <div class="separator"></div>
+
+            <h2>School Projects</h2>
+
+						<div class="project-dropdown">
+              <div class="project-title">
+                <a class="project-link" href="#">Not Zombies</a><a href="https://github.com/mfukano/Not-Zombies"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
                 <p class="project-description">Not Zombies is a survival exploration game prototype by my team of 5. It was written in Unity and C# and features pixel drawn maps and custom AI.</p>
@@ -55,7 +103,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="project-dropdown">
               <div class="project-title">
-                <a class="project-link" href="#">Just the Tip</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a> 
+                <a class="project-link" href="#">Just the Tip</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
               <p class="project-description">
@@ -76,58 +124,11 @@ morphing into a sandbox design experiment for my HTML/CSS
               </div>
             </div>
 
-            <div class="separator"></div>
-
-            <h2>Open Source</h2>  
-
-            <div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Noding Bat</a><a href="https://github.com/omariio/nodingbat"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a> 
-              </div>
-              <div class="project-container hide">
-                <p class="project-description">
-                <div class="carousel" class="shadow">
-                  <img class='opaque' src="assets/images/noding-bat-1.png" />
-                  <img src="assets/images/noding-bat-2.png" />
-                </div>
-                <p class="carousel_controls">
-                  <span class="selected">1</span>
-                  <span>2</span>
-                </p>
-                <p>Noding Bat is an open source extension of Coding Bat. It aims to provide beginner programmers with basic JavaScript mechanics.</p>
-                </p>
-              </div>
-            </div>
-
-            <div class="separator"></div>
-
-            <h2>Fun Stuff</h2>
-
-            <div class="project-dropdown">
-              <div class="project-title">
-                <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
-              </div>
-              <div class="project-container hide">
-                <p class="project-description">
-                <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
-                </p>
-                <p class="project-description">A simple tribute page inspired by Free Code Camp. I think this is a great resource and worth walking through for anyone that's trying to break into modern programming, or transition into web development.</p>
-              </div>
-            </div>
-
-            <div class="project-dropdown">
-              <a class="project-link">matfukano.com</a>
-              <div class="project-container hide">
-                <p class="project-description">This one is pretty self explanatory. My personal site lets me experiment with different ways to do things, and a lot of what I've learned here (clickable contexts for jQuery, box-model details, active classes, and hand-coding Bootstrap-like functionality) is applicable to future works.</p>
-              </div>
-            </div>
-
           </div> <!-- close text-box -->
 
           <!-- Icon Footer -->
-          <div class="attribution">Credit for icons is due to 
-            <a href="http://www.flaticon.com/authors/freepik">various</a> 
+          <div class="attribution">Credit for icons is due to
+            <a href="http://www.flaticon.com/authors/freepik">various</a>
             <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
           </div>
 
@@ -195,8 +196,8 @@ morphing into a sandbox design experiment for my HTML/CSS
           </div>
 
           <!-- Icon Footer -->
-          <div class="attribution">Credit for icons is due to 
-            <a href="http://www.flaticon.com/authors/freepik">various</a> 
+          <div class="attribution">Credit for icons is due to
+            <a href="http://www.flaticon.com/authors/freepik">various</a>
             <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
           </div>
 
@@ -205,7 +206,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
       <!-- Bottom Left (hobbies) -->
       <div class="box bottom left">
-        <h1 class="title bottom left">hobbies</h1>
+        <h1 class="title bottom left">about</h1>
         <div class="wrapper">
 
           <div class="icons right">
@@ -214,17 +215,26 @@ morphing into a sandbox design experiment for my HTML/CSS
           </div>
 
           <div class="text-box">
+						<p>
+						I'm a pretty voracious learner, especially when it comes to new technology.
+						I've played around with a lot, but the two languages I've really fallen in love with are JavaScript and Ruby. I think they're both incredibly elegant, in different ways.
+						It gets pretty tough to divorce my efforts between learning about JS and its frameworks (a lifetime in itself), and really grasping Ruby (and Rails), but I like to think I'm doing a good job.
+						Combine these with a solid grounding in HTML and CSS and you have yourself a web developer!
+						</p>
+
             <p>
-            I've been a musician. I started playing when I was young with wind instruments in concert bands, jazz bands, and symphonic orchestras. The laundry list of instruments I've played: piano, clarinet, bass clarinet, alto/tenor/baritone sax, bassoon, contrabassoon, guitar, bass guitar. Whew.
+            I'm also a musician. I was very involved with group music making when I was younger, and have played piano, clarinet, bass clarinet, alto/tenor/baritone sax, bassoon, contrabassoon, along with guitar and bass guitar in my spare time. Whew.<br>
+            I started getting interested in electronic music at university. <a href="http://www.ableton.com">Ableton</a> is probably the single most-used piece of software on my computer, and I love the freedom to draft and create ideas, and allow people to enjoy my creations.
             </p>
-            <p>
-            Though I'm no longer involved in group music making, I started getting interested in electronic music at university. <a href="http://www.ableton.com">Ableton</a> is probably the single most-used piece of software on my computer, and I love the freedom to draft and create ideas, and allow people to enjoy my creations.
-            </p>
+
+						<p>
+						When I'm not pursuing either of my two incredibly time-consuming passions, I like to cook, rock-climb, and get outdoors a la hiking or camping.
+						</p>
           </div>
 
           <!-- Icon Footer -->
-          <div class="attribution">Credit for icons is due <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a> 
-            <a href="http://www.flaticon.com/authors/freepik">various</a> 
+          <div class="attribution">Credit for icons is due <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
+            <a href="http://www.flaticon.com/authors/freepik">various</a>
             <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
           </div>
 
@@ -250,8 +260,8 @@ morphing into a sandbox design experiment for my HTML/CSS
           </div>
 
           <!-- Icon Footer -->
-          <div class="attribution">Credit for icons is due <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a> 
-            <a href="http://www.flaticon.com/authors/freepik">various</a> 
+          <div class="attribution">Credit for icons is due <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
+            <a href="http://www.flaticon.com/authors/freepik">various</a>
             <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
           </div>
 
