Cleaned up markup, p styles

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
           <div class="icons right">
-            <a href="http://github.com/mfukano"><img src="assets/svg/github-logo.svg" alt="github-octocat" class="icon" /></a>
-            <a href="http://codepen.io/marotafuka"><img src="assets/svg/codepen.svg" alt="codepen-shape" class="icon" style="padding-right: 5px;" /></a>
+            <a href="http://github.com/mfukano">
+							<img src="assets/svg/github-logo.svg" alt="github-octocat" class="icon" /></a>
+            <a href="http://codepen.io/marotafuka">
+							<img src="assets/svg/codepen.svg" alt="codepen-shape" class="icon" style="padding-right: 5px;" /></a>
           </div>
 
           <div class="text-box">
@@ -38,10 +40,14 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="project-dropdown">
               <div class="project-title">
-                <a class="project-link" href="#">Pocket Mom</a><a href="http://www.pocketmom.io"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+                <a class="project-link" href="#">Pocket Mom</a>
+								<a href="http://www.pocketmom.io">
+									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
-                <p class="project-description">I built the landing page for Pocket Mom, an upcoming productivity application.</p>
+                <p class="project-description">
+									I built the landing page for Pocket Mom, an upcoming productivity application.
+								</p>
               </div>
             </div>
 
@@ -54,14 +60,24 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                 <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
                 </p>
-                <p class="project-description">A simple tribute page inspired by Free Code Camp. I think this is a great resource and worth walking through for anyone that's trying to break into modern programming, or transition into web development.</p>
+                <p class="project-description">
+									A simple tribute page inspired by Free Code Camp.
+									I think this is a great resource and worth walking through for anyone that's trying to break into modern programming,
+									or transition into web development.
+								</p>
               </div>
             </div>
 
             <div class="project-dropdown">
               <a class="project-link">matfukano.com</a>
               <div class="project-container hide">
-                <p class="project-description">This one is pretty self explanatory. My personal site lets me experiment with different ways to do things, and a lot of what I've learned here (clickable contexts for jQuery, box-model details, active classes, and hand-coding Bootstrap-like functionality) is applicable to future works.</p>
+                <p class="project-description">
+									This one is pretty self explanatory.
+									My personal site lets me experiment with different ways to do things,
+									and a lot of what I've learned here (clickable contexts for jQuery,
+									box-model details, active classes, and hand-coding Bootstrap-like functionality)
+									is applicable to future works.
+								</p>
               </div>
             </div>
 
@@ -71,10 +87,12 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="project-dropdown">
               <div class="project-title">
-                <a class="project-link" href="#">Noding Bat</a><a href="https://github.com/omariio/nodingbat"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+                <a class="project-link" href="#">Noding Bat</a>
+								<a href="https://github.com/omariio/nodingbat">
+									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
-                <p class="project-description">
+
                 <div class="carousel" class="shadow">
                   <img class='opaque' src="assets/images/noding-bat-1.png" />
                   <img src="assets/images/noding-bat-2.png" />
@@ -83,8 +101,11 @@ morphing into a sandbox design experiment for my HTML/CSS
                   <span class="selected">1</span>
                   <span>2</span>
                 </p>
-                <p>Noding Bat is an open source extension of Coding Bat. It aims to provide beginner programmers with basic JavaScript mechanics.</p>
-                </p>
+                <p>
+									Noding Bat is an open source extension of Coding Bat.
+									It aims to provide beginner programmers with basic JavaScript mechanics.
+								</p>
+
               </div>
             </div>
 
@@ -148,50 +169,60 @@ morphing into a sandbox design experiment for my HTML/CSS
 
           <div class="text-box">
 
-            <h2>Summary</h2>
-            <p>To use my passion for web development and computer science fundamentals to implement clean and functional website design centered on usability.</p>
+            <h2>Objective</h2>
+            <p>
+							To use my passion for web development and computer science fundamentals to
+							implement clean and functional website design centered on usability.
+						</p>
 
             <div class="separator"></div>
 
             <h2>Education</h2>
             <p><em>BSc</em> in Computer Science<br>
-            <em>University of California, Santa Cruz</em> 2011 - 2015<br>
+            University of California, Santa Cruz (2011 - 2015)<br>
             Notable Classes: Software Engineering, Mobile Development, Web Design</em></p>
 
             <div class="separator"></div>
 
             <h2>Skills</h2>
-            <p><em>Languages: </em> JavaScript, Ruby, HTML5, CSS, Java, XML<br>
-            <em>Software & Libraries: </em>Bootstrap, Rails, Sinatra, jQuery, Postgres <br>
-            <em>Development: </em> Agile (SCRUM), UML modeling, acceptance TDD</p>
+						<div class="project-li"><p><b>Languages: </b> JavaScript, Ruby, HTML5, CSS, Java</p></div>
+						<div class="project-li"><p><b>Frameworks: </b>Bootstrap, Rails, Sinatra</p></div>
+						<div class="project-li"><p><b>Tools & Tech: </b>jQuery, AJAX, npm, Atom, git, JSON, XML, GIMP</p></div>
+						<div class="project-li"><p><b>Development: </b> Agile (SCRUM), UML modeling, acceptance TDD</p></div>
 
             <div class="separator"></div>
 
             <h2>Projects</h2>
-            <p>
-            <p class="project-li"><em>"Better Threads"</em> (2016 - [ongoing]) -- Full-stack Rails developer<br></p>
-            <ul>
-            <li>Database of sustainable clothing companies</li>
-            <li>Emphasizes ease-of-use for accessibility</li>
-            </ul>
+            <div class="project-li">
+							<p><b>Better Threads</b> (ongoing) -- Full-stack Rails developer<br></p>
+		          <ul>
+		            <li>Database of sustainable clothing companies</li>
+		            <li>Emphasizes ease-of-use for accessibility</li>
+		          </ul>
+						</div>
 
-            <p class="project-li"><em>"Pocket Mom"</em> (2016) -- Front-end Developer</p>
-            <ul>
-            <li>Landing page for productivity app built with jQuery / HTML / CSS</li>
-            <li>Responsive page with JavaScript generated graphics</li>
-            </ul>
+            <div class="project-li">
+							<p><b>Pocket Mom</b> (2016) -- Front-end Developer</p>
+	            <ul>
+		            <li>Landing page for productivity app built with jQuery / HTML / CSS</li>
+		            <li>Responsive page with JavaScript generated graphics</li>
+	            </ul>
+						</div>
 
-            <p class="project-li"><em>"Just the Tip"</em> (2015) -- Java programmer and UX design</p>
-            <ul>
-              <li>Android app for local tip payment and pay share via QR code</li>
-            </ul>
+            <div class="project-li">
+							<p><b>Just the Tip</b> (2015) -- Java programmer and UX design</p>
+	            <ul>
+	              <li>Android app for local tip payment and pay share via QR code</li>
+	            </ul>
+						</div>
 
-            <p class="project-li"><em>"Not Zombies"</em> (2015) -- Product owner and C# developer</p>
-            <ul>
-            <li>Top-down survival prototype built in Unity with C# over 10 weeks</li>
-            <li>SCRUM to manage deadlines and focus development</li>
-            </ul>
-            </p>
+            <div class="project-li">
+							<p><b>"Not Zombies"</b> (2015) -- Product owner and C# developer</p>
+	            <ul>
+		            <li>Top-down survival prototype built in Unity with C# over 10 weeks</li>
+		            <li>SCRUM to manage deadlines and focus development</li>
+	            </ul>
+						</div>
 
           </div>
 
@@ -215,20 +246,34 @@ morphing into a sandbox design experiment for my HTML/CSS
           </div>
 
           <div class="text-box">
+						<h3>Tech</h3>
 						<p>
-						I'm a pretty voracious learner, especially when it comes to new technology.
-						I've played around with a lot, but the two languages I've really fallen in love with are JavaScript and Ruby. I think they're both incredibly elegant, in different ways.
-						It gets pretty tough to divorce my efforts between learning about JS and its frameworks (a lifetime in itself), and really grasping Ruby (and Rails), but I like to think I'm doing a good job.
-						Combine these with a solid grounding in HTML and CSS and you have yourself a web developer!
+							I love to learn, especially when it comes to new technology.
+						</p>
+						<p>
+							I've played around with a lot, but the two languages I've fallen for are JavaScript and Ruby.
+							They're both incredibly elegant, in different ways.
+							I'm currently split between learning about JS and its frameworks,
+							and really grasping Ruby (and Rails). Both challenging tasks, but I like to think I'm doing a good job.
+							Combine these with a solid grounding in HTML and CSS and you have yourself a web developer!
 						</p>
 
+						<h3>Music</h3>
             <p>
-            I'm also a musician. I was very involved with group music making when I was younger, and have played piano, clarinet, bass clarinet, alto/tenor/baritone sax, bassoon, contrabassoon, along with guitar and bass guitar in my spare time. Whew.<br>
-            I started getting interested in electronic music at university. <a href="http://www.ableton.com">Ableton</a> is probably the single most-used piece of software on my computer, and I love the freedom to draft and create ideas, and allow people to enjoy my creations.
+            	I'm also a musician. I've been involved with group music-making for years,
+							and have played piano, clarinet, bass clarinet, alto/tenor/baritone sax,
+							bassoon, contrabassoon, along with guitar and bass guitar in my spare time.
+							I'm nothing if not well-rounded.
+						</p>
+            <p>
+							I developed an interest in electronic music at university.
+							<a href="http://www.ableton.com">Ableton</a> is probably the single most-used piece of software on my computer.
+							I love the freedom to draft and create ideas, and allow people to enjoy my creations.
             </p>
-
+						<h3>Hobbies</h3>
 						<p>
-						When I'm not pursuing either of my two incredibly time-consuming passions, I like to cook, rock-climb, and get outdoors a la hiking or camping.
+						When I'm not pursuing either of my two incredibly time-consuming passions,
+						I like to cook, rock-climb, and get outdoors a la hiking or camping.
 						</p>
           </div>
 
@@ -244,18 +289,28 @@ morphing into a sandbox design experiment for my HTML/CSS
       <!-- Bottom Right (contact) -->
       <div class="box bottom right">
         <h1 class="title bottom right">contact</h1>
-        <div class="wrapper">
 
+        <div class="wrapper">
           <div class="icons left">
-            <a href="mailto:" target="_top"><img src="assets/svg/multimedia.svg" alt="mail-envelope"  class="icon" style="padding-left: 1px;" /></a>
-            <a href="http://linkedin.com/in/marotafuka"><img src="assets/svg/linkedin-logo.svg" alt="linkedin-in"  class="icon"  /></a>
-            <a href="https://angel.co/mat-fukano"><img src="assets/svg/victory-sign.svg" alt="angellist-peace"  class="icon" /></a>
-            <a href="https://twitter.com/marotafuka"><img src="assets/svg/twitter-logo.svg" alt="twitter-bluebird"  class="icon" /></a>
+            <a href="mailto:" target="_top">
+							<img src="assets/svg/multimedia.svg" alt="mail-envelope"  class="icon" style="padding-left: 1px;" /></a>
+            <a href="http://linkedin.com/in/marotafuka">
+							<img src="assets/svg/linkedin-logo.svg" alt="linkedin-in"  class="icon"  /></a>
+            <a href="https://angel.co/mat-fukano">
+							<img src="assets/svg/victory-sign.svg" alt="angellist-peace"  class="icon" /></a>
+            <a href="https://twitter.com/marotafuka">
+							<img src="assets/svg/twitter-logo.svg" alt="twitter-bluebird"  class="icon" /></a>
           </div>
 
           <div class="text-box">
             <p>
-            I'm looking for work! I like front-end development and I'm working on mastering crucial technologies for a relevant front-end developer today. If you're looking for a web developer who can learn quickly, contribute meaningfully and make differences when it matters, feel free to shoot me an email. You can also download my resume <a href="assets/pdf/MF-resume.pdf" download>here</a> or in the Resume section.
+	            I'm looking for work! I like front-end development and I'm working on
+							mastering crucial technologies for a relevant front-end developer today.
+							If you're looking for a web developer who can learn quickly,
+							contribute meaningfully and make differences when it matters,
+							feel free to shoot me an email. You can also download my
+							<a href="assets/pdf/MF-resume.pdf" download>resume.PDF here</a>,
+							or in the Resume section (with additional formats).
             </p>
           </div>
 
