--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@ morphing into a sandbox design experiment for my HTML/CSS
             </div>
 
 						<div class="project-dropdown">
+							<div class="project-title">
+								<a href="#" class="project-link">Wikipedia Viewer</a><a href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
+							</div>
+							<div class="project-container hide">
+								<p class="project-description">
+								<p data-height="265" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+								</p>
+								<p class="project-description">
+									A responsive Wikipedia viewer; uses API integration from MediaWiki and utilizes mobile Wikipedia links where appropriate. A good study
+									in API calls and DRY code.
+								</p>
+							</div>
+						</div>
+
+						<div class="project-dropdown">
               <div class="project-title">
                 <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
@@ -88,7 +104,7 @@ morphing into a sandbox design experiment for my HTML/CSS
             <div class="project-dropdown">
               <div class="project-title">
                 <a class="project-link" href="#">Noding Bat</a>
-								<a href="https://github.com/omariio/nodingbat">
+								<a href="nodingbat.com:3000">
 									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
               <div class="project-container hide">
