--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 <html>
 	<head>
 		<title>Mat Portfolio Design</title>
-		<link rel="stylesheet" href="/stylesheets/stylesheet.css" type="text/css" />
+		<link rel="stylesheet" href="./stylesheets/stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -46,14 +46,12 @@ morphing into a sandbox design experiment for my HTML/CSS
             </div>
 
 						<div class="project-dropdown">
-<<<<<<< Updated upstream
-=======
 							<div class="project-title">
 								<a href="#" class="project-link">Wikipedia Viewer</a><a href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
 							</div>
 							<div class="project-container hide">
 								<p class="project-description">
-								<p data-height="400" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+								<p data-height="550" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 								</p>
 								<p class="project-description">
@@ -64,7 +62,6 @@ morphing into a sandbox design experiment for my HTML/CSS
 						</div>
 
 						<div class="project-dropdown">
->>>>>>> Stashed changes
               <div class="project-title">
                 <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
@@ -291,6 +288,6 @@ morphing into a sandbox design experiment for my HTML/CSS
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
 
-    <script src="/javascripts/application.js" type="text/javascript"></script>
+    <script src="./javascripts/application.js" type="text/javascript"></script>
 	</body>
 </html>
