--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 <html>
 	<head>
 		<title>Mat Portfolio Design</title>
-		<link rel="stylesheet" href="./stylesheets/stylesheet.css" type="text/css" />
+		<link rel="stylesheet" href="/stylesheets/stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -343,6 +343,6 @@ morphing into a sandbox design experiment for my HTML/CSS
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
 
-    <script src="./javascripts/application.js" type="text/javascript"></script>
+    <script src="/javascripts/application.js" type="text/javascript"></script>
 	</body>
 </html>
