testing production assets folder ii

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 							If you're looking for a web developer who can learn quickly,
 							contribute meaningfully and make differences when it matters,
 							feel free to shoot me an email. You can also download my
-							<a href="/assets/pdf/MF-resume.pdf" download>resume.PDF here</a>,
+							<a href="/assets/documents/MF-resume.pdf" download>resume.PDF here</a>,
 							or in the Resume section (with additional formats).
             </p>
           </div>
