--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 								<a href="http://www.pocketmom.io">
 									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
-              <div class="project-container hide">
+              <div class="project-container">
                 <p class="project-description">
 									I built the landing page for Pocket Mom, an upcoming productivity application.
 								</p>
@@ -59,7 +59,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 							<div class="project-title">
 								<a href="#" class="project-link">Wikipedia Viewer</a><a href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
 							</div>
-							<div class="project-container hide">
+							<div class="project-container">
 								<p class="project-description">
 								<p data-height="550" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
@@ -75,7 +75,7 @@ morphing into a sandbox design experiment for my HTML/CSS
               <div class="project-title">
                 <a class="project-link" href="#">Miyazaki Tribute</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
-              <div class="project-container hide">
+              <div class="project-container">
                 <p class="project-description">
                 <p data-height="400" data-theme-id="light" data-slug-hash="EKrMMB" data-default-tab="result" data-user="marotafuka" data-embed-version="2" data-preview="true" class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/EKrMMB/">Miyazaki Tribute</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                 <script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
@@ -90,7 +90,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <div class="project-dropdown">
               <a class="project-link">matfukano.com</a>
-              <div class="project-container hide">
+              <div class="project-container">
                 <p class="project-description">
 									This one is pretty self explanatory.
 									My personal site lets me experiment with different ways to do things,
@@ -111,7 +111,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 								<a href="nodingbat.com:3000">
 									<img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
-              <div class="project-container hide">
+              <div class="project-container">
 
                 <div class="carousel" class="shadow">
                   <img class='opaque' src="assets/images/noding-bat-1.png" />
@@ -137,7 +137,7 @@ morphing into a sandbox design experiment for my HTML/CSS
               <div class="project-title">
                 <a class="project-link" href="#">Not Zombies</a><a href="https://github.com/mfukano/Not-Zombies"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
-              <div class="project-container hide">
+              <div class="project-container">
                 <p class="project-description">Not Zombies is a survival exploration game prototype by my team of 5. It was written in Unity and C# and features pixel drawn maps and custom AI.</p>
               </div>
             </div>
@@ -146,7 +146,7 @@ morphing into a sandbox design experiment for my HTML/CSS
               <div class="project-title">
                 <a class="project-link" href="#">Just the Tip</a><a href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg" alt="goto-page" class="go-icon" /></a>
               </div>
-              <div class="project-container hide">
+              <div class="project-container">
               <p class="project-description">
                 <div class="carousel" class="shadow">
                   <img class='opaque' src="assets/images/jtt_1.png" />
